feat: Add last will online/offline status
